performance tweak in GuiDisplayUtil